# cif2xrd

./: .gitignore  LICENSE  README.md  pyproject.toml  windows_deploy.bat  windows_test_deploy.bat
Origin-PXRD 1.3 Modules/: PXRD_anneal.py  PXRD_checkVersion.py  PXRD_cifImp.py  PXRD_editFurnace.py  PXRD_lt_cleanup.py  PXRD_phaseFrac.py  PXRD_process11ID.py  PXRD_qSpace.py  PXRD_rasImp.py  PXRD_transform.py
src/cif2xrd/: __init__.py  furnace.py  paramUtils.py  pattern.py
src/cif2xrd/originlab/: __init__.py  _cifUtils.py  _rasUtils.py  transforms.py
tests/: printTest.py
tests/CIF/: BaSb2.cif  Na (Im-3m).cif  Si (Fd-3m).cif  W (Im-3m).cif
tests/patterns/: BaSb2_pattern_fromOrigin.txt
