[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "cif2xrd"
version = "1.0.0"
description = "A python package for simulating X-ray powder diffraction patterns from CIF files. Adds peak broadening and phase fraction scaling to existing pymatgen features."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Travis Errthum" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pymatgen",
    "numpy"
]


[project.urls]
Homepage = "https://github.com/errthumt/cif2xrd"
Issues = "https://github.com/errthumt/cif2xrd/issues"
